force-app/main/default/objects/B_D_Account__c/B_D_Account__c.object-meta.xml
<CustomObject>
    <label>B/D Account</label>
    <nameField>
        <label>B/D Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B/D accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>