force-app/main/default/objects/B_D_Account__c/fields/Nimit__c.field-meta.xml
<CustomField>
    <fullName>Nimit__c</fullName>
    <label>Nimit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>