force-app/main/default/objects/B_D_Account__c/fields/Nisarg__c.field-meta.xml
<CustomField>
    <fullName>Nisarg__c</fullName>
    <label>Nisarg</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>