force-app/main/default/objects/B_D_Account__c/fields/Shlesha__c.field-meta.xml
<CustomField>
    <fullName>Shlesha__c</fullName>
    <label>Shlesha</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>